kubernetes/skywalker/argocd/argocd.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: argocd

spec:
  gateways:
    - istio-system/feldman-in
  hosts:
    - argocd.feldman.in
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argocd-server
            port:
              number: 80
